# healthyvenus-ai

./: .gitignore  .replit  .streamlitcloud.json  APP_IS_RUNNING.md  COMPLETION_SUMMARY.md  DEPLOY_NOW.md  DEPLOY_STREAMLIT_CLOUD.md  DESKTOP_MOBILE_GUIDE.md  GITHUB_DEPLOYMENT.md  MOBILE_SETUP.md  MVP_FEATURES.md  QUICK_COMMANDS.md  QUICK_START.md  README.md  REPLIT_DEPLOYMENT.md  REPLIT_LIVE_NOW.md  REPLIT_QUICK_START.md  SETUP_COMPLETE.md  START_HERE.txt  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  app.py  app_mobile.py  deploy_replit.sh  pyproject.toml  railway.json  render.yaml  replit.nix  requirements.txt  run.sh
data/: sample_ingredients.txt
frontend/: index.html
src/: agents.py  api.py  ingest.py  products_db.py  qr_scanner.py  qr_scanner_new.py  rag.py  run.py  search_history.py
