[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "healthyvenus-ai"
version = "1.0.0"
description = "AI-powered clean beauty ingredient scanner"
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.50.0",
    "langchain==0.3.0",
    "langchain-openai==0.1.21",
    "openai>=1.0",
    "chromadb==0.4.22",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.0",
    "pyzbar>=0.1.9",
    "fastapi==0.109.2",
    "uvicorn==0.27.1",
    "pydantic>=2.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Usha2025-git/healthyvenus-ai"
Repository = "https://github.com/Usha2025-git/healthyvenus-ai.git"
